--- a/gone/style.css
+++ b/gone/style.css
@@ -34,7 +34,7 @@ h1 {
   left: 24px;
 }
 
-h2 {
+h2, ul {
   left: 240px;
 }
 
@@ -143,7 +143,11 @@ a:hover {
     margin: 0;
   }
 
-  p, ul, 
+  ul {
+    left: 24px !important;
+  }
+
+  p, ul,
   footer {
     font-size: 20px;
   }
