--- a/assets/style.css
+++ b/assets/style.css
@@ -51,8 +51,8 @@ p {
   margin-bottom: 0;
 }
 
-ul {
-  list-style-type: square;
+.about p:first-child {
+  margin-block-start: 0;
 }
 
 /* Media Queries */
@@ -97,6 +97,10 @@ ul {
     padding-bottom: 50vw;
   }
 
+  .about {
+    margin-top: 5vw;
+  }
+
   .header {
     display: block;
     height: 90vw;
@@ -120,7 +124,7 @@ ul {
     margin-bottom: 5vw;
   }
 
-  ol, ul {
+  ol {
     padding-inline-start: 9vw;
   }
 
@@ -134,6 +138,10 @@ ul {
   body {
     margin: 3vw;
     padding-bottom: 12vw;
+  }
+
+  .about {
+    margin-top: 3vw;
   }
 
   .header {
@@ -158,7 +166,7 @@ ul {
     margin-bottom: 3vw;
   }
 
-  ol, ul {
+  ol {
     padding-inline-start: 7vw;
   }
 }
@@ -171,6 +179,10 @@ ul {
   body {
     margin: 2vw;
     padding-bottom: 12vw;
+  }
+
+  .about {
+    margin-top: 2vw;
   }
 
   .header {
@@ -196,7 +208,7 @@ ul {
     margin-bottom: 2vw;
   }
 
-  ol, ul {
+  ol {
     padding-inline-start: 4.5vw;
   }
 }
@@ -209,6 +221,15 @@ ul {
   body {
     margin: 1vw;
     padding-bottom: 12vw;
+  }
+
+  .about {
+    margin-top: 1vw;
+  }
+
+  .header {
+    display: block;
+    height: 20vw;
   }
 
   .container {
@@ -229,7 +250,7 @@ ul {
     margin-bottom: 1vw;
   }
 
-  ol, ul {
+  ol {
     padding-inline-start: 3vw;
   }
 }
