--- a/assets/style.css
+++ b/assets/style.css
@@ -93,8 +93,6 @@ p {
   color: #f3f3f3;
 }
 
-/* Media Queries */
-
 .hidden {
     color: #BAA697;
     max-height:0px;
@@ -115,6 +113,10 @@ p {
     -ms-transition: max-height, 0.5s;
     -o-transition: max-height, 0.5s;
     transition: max-height, 0.5s;
+}
+
+.whiteLink a {
+  color: white;
 }
 
 
