--- a/assets/style.css
+++ b/assets/style.css
@@ -81,7 +81,7 @@ p {
   position: relative;
   width: 96vw;
   padding: 2vw;
-  margin: 2vw 0;
+  margin-top: 2vw;
   left: -2vw;
 }
 
@@ -180,7 +180,7 @@ p {
   .sketches {
     width: 90vw;
     padding: 5vw;
-    margin: 5vw 0;
+    margin-top: 5vw;
     left: -5vw;
   }
 
@@ -252,7 +252,7 @@ p {
   .sketches {
     width: 94vw;
     padding: 3vw;
-    margin: 3vw 0;
+    margin-top: 3vw;
     left: -3vw;
   }
 
@@ -323,7 +323,7 @@ p {
   .sketches {
     width: 96vw;
     padding: 2vw;
-    margin: 2vw 0;
+    margin-top: 2vw;
     left: -2vw;
   }
 
@@ -393,7 +393,7 @@ p {
   .sketches {
     width: 98vw;
     padding: 1vw;
-    margin: 1vw 0;
+    margin-top: 1vw;
     left: -1vw;
   }
 
